--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
   # コード品質チェック
   code-quality:
     name: Code Quality
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - uses: dtolnay/rust-toolchain@stable
@@ -40,10 +40,12 @@ jobs:
   # テスト実行
   test:
     name: Test Suite
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - uses: dtolnay/rust-toolchain@stable
+      with:
+        targets: x86_64-pc-windows-gnu
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
@@ -59,12 +61,18 @@ jobs:
 
   # ビルドテスト
   build-test:
-    name: Build Test
-    runs-on: windows-latest
+    name: Build Test (Windows Cross-compile)
+    runs-on: ubuntu-latest
     needs: [code-quality, test]
     steps:
     - uses: actions/checkout@v4
     - uses: dtolnay/rust-toolchain@stable
+      with:
+        targets: x86_64-pc-windows-gnu
+    - name: Install cross-compilation tools
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y mingw-w64 gcc-mingw-w64-x86-64
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
@@ -73,17 +81,23 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Build application
-      run: npm run tauri build
+      run: npx tauri build --target x86_64-pc-windows-gnu
 
   # リリースビルド
   release:
-    name: Release Build
-    runs-on: windows-latest
+    name: Release Build (Windows Cross-compile)
+    runs-on: ubuntu-latest
     needs: build-test
     if: github.event_name == 'release'
     steps:
     - uses: actions/checkout@v4
     - uses: dtolnay/rust-toolchain@stable
+      with:
+        targets: x86_64-pc-windows-gnu
+    - name: Install cross-compilation tools
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y mingw-w64 gcc-mingw-w64-x86-64
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
@@ -92,13 +106,14 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Build application for release
-      run: npm run tauri build
+      run: npx tauri build --target x86_64-pc-windows-gnu
     - name: Upload release assets
       uses: actions/upload-artifact@v4
       with:
         name: booth-organizer-windows
         path: |
-          src-tauri/target/release/bundle/nsis/*.exe
+          src-tauri/target/x86_64-pc-windows-gnu/release/*.exe
+          src-tauri/target/x86_64-pc-windows-gnu/release/bundle/nsis/*.exe
 
 
   # デプロイメント
